style.css
/* ... */
.arrow-btn:hover,
.arrow-btn:focus-visible {
  opacity: 0.8;
}

.slider-btn {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  padding: 1rem;
}

#up-arrow,
#down-arrow {
  display: none;
  position: fixed;
  right: 5%;
  bottom: 5%;
  i {
    padding: 0.5rem;
    font-size: 1.75rem;
  }
}

#up-arrow {
  bottom: 16%;
}

/* -------------------NAVIGATION */

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 2rem;
  padding: 1.5rem;
}

.nav-links {
  gap: 1rem;
  list-style: none;
  flex-direction: column;
  position: absolute;
  top: 12%;
  right: 10%;
  width: fit-content;
  max-height: 0;
  overflow: hidden;
  transition: all 300ms ease-in-out;
  align-items: center;
}

.nav-links a {
  display: block;
  padding: 10px;
  text-align: center;
}

.nav-links.open {
  max-height: 300px;
}

.logo {
  font-size: 1.5rem;
  cursor: pointer;
  font-weight: 800;
  white-space: nowrap;
  max-height: 100%;
  position: relative;
  color: var(--clr-primary);
  opacity: 0.9;
}

.logo:after {
  position: absolute;
  content: "Emil Jädersten";
  color: var(--clr-secondary);
  left: 0;
  top: 0;
  z-index: -1;
  filter: blur(2px);
  opacity: 0.75;
  transition: all 300ms ease;
}

.logo:before {
  position: absolute;
  content: "Emil Jädersten";
  color: var(--clr-black);
  left: 0;
  top: 0;
  transition: all 300ms ease;
}

.logo:hover {
  color: var(--clr-primary);
}

.logo:hover::before {
  top: 20%;
  left: 2%;
}

.logo:hover::after {
  top: -20%;
  left: -2%;
}

.burger-menu {
  position: relative;
  display: inline-block;
}

.burger-icon {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 24px;
  width: 32px;
  cursor: pointer;
}

.burger-icon span {
  width: 100%;
  height: 2px;
  background-color: var(--clr-black);
  transition: all 300ms ease-in-out;
}

.burger-icon.open span:first-child {
  transform: rotate(45deg) translate(10px, 5px);
}
.burger-icon.open span:nth-child(2) {
  opacity: 0;
}
.burger-icon.open span:last-child {
  transform: rotate(-45deg) translate(10px, -5px);
}

/* ------------------------SECTIONS */

section {
  margin: 0 5% 2rem;
  box-sizing: border-box;
  height: fit-content;
  min-height: fit-content;
  position: relative;
}

.section-container {
  display: block;
  gap: 2rem;
  height: 80%;
}

/* --------------------HERO SECTION */

#hero {
  display: block;
  justify-content: center;
  gap: 1rem;
  flex-wrap: wrap;
}

#profile-pic {
  width: 200px;
  height: 200px;
  margin: 0 auto 2rem;
  border-radius: 50%;
}

.section__text {
  align-self: center;
  text-align: center;
}

.section__text p {
  font-weight: 600;
  color: var(--clr-dark-grey);
}

.section__text__p1 {
  font-size: 1.75rem;
  text-align: center;
}

.section__text__p2 {
  font-size: 1.75rem;
  margin-bottom: 1rem;
}

.title {
  font-size: 2rem;
  text-align: center;
  white-space: nowrap;
  position: relative;
  width: fit-content;
  margin: 0 auto;
}

.title::after {
  content: "";
  height: 40px;
  position: absolute;
  background-color: var(--clr-secondary);
  left: -10%;
  right: -10%;
  z-index: -1;
  border-radius: 12px;
  filter: blur(16px);
}

.socials {
  justify-content: center;
  margin-top: 1rem;
  gap: 1rem;
}

.btn-container {
  justify-content: center;
  gap: 1rem;
}

/* -------------------ABOUT SECTION */

#experience {
  margin-bottom: 3rem;
}

.details-wrapper {
  gap: 2rem;
  margin-top: 0;
  flex-wrap: wrap;
}

#about .details-wrapper {
  padding: 2rem 1.5rem;
}

.about-details {
  justify-content: center;
  flex-direction: column;
}

.text-container {
  padding: 0 3rem 1rem;
}

.details-container {
  padding: 0.5rem 1rem 2rem;
  flex: 1;
  border-radius: 2rem;
  border: 0.1rem solid var(--clr-dark-grey);
  text-align: center;
  background-color: var(--clr-light-grey);
}

/* ---------------EXPERIENCE SECTION */

#experience .details-wrapper {
  flex-direction: column;
  gap: 1rem;
  overflow-x: hidden;
}
.experience-subtitle {
  color: #444;
  font-weight: 600;
  font-size: 1.25rem;
  margin-left: 2.5rem;
  margin-bottom: -1.5rem;
  background-color: var(--clr-bg);
  z-index: 1;
  width: fit-content;
}

.experience-details {
  justify-content: center;
  flex-direction: column;
  margin-top: 2rem;
}

#frontend-experience,
#backend-experience {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: 1fr;
  width: 94%;
  margin: 0 auto;
  text-align: initial;
  gap: 1rem;
  max-height: 40%;
  overflow-x: auto;
}

.experience-block {
  padding: 1.5rem;
  font-size: 1rem;
  width: 30vw;
  border: 0.1rem solid var(--clr-dark-grey);
  border-radius: 12px;
  background-color: var(--clr-light-grey);
}

@media (prefers-reduced-motion: no-preference) {
  #frontend-experience,
  #backend-experience {
    overflow-x: hidden;
  }

  #frontend-experience > * {
    animation: sideScroll linear;
    animation-timeline: scroll(root);
    --scroll-begin: 0;
    --scroll-end: -1800%;
  }

  #backend-experience > * {
    animation: sideScroll linear;
    animation-timeline: scroll(root);
    --scroll-begin: -1500%;
    --scroll-end: 0;
  }

  @keyframes sideScroll {
    0% {
      transform: translateX(var(--scroll-begin));
    }
    30% {
      transform: translateX(var(--scroll-begin));
    }
    100% {
      transform: translateX(calc(var(--scroll-end)));
    }
    100% {
      transform: translateX(calc(var(--scroll-end)));
    }
  }
}

/* ----------------PROJECTS SECTION */

#projects {
  height: 96vh;
  overflow: hidden;
}

.carousel {
  position: relative;
  perspective: 100px;
  height: 80%;
  overflow-x: hidden;
  padding: 1rem 0;
}

.carousel__viewport {
  height: 100%;
  display: flex;
  list-style: none;
  overflow: hidden;
}

.carousel__slide {
  flex: 0 0 auto;
  width: 100%;
  max-width: 100%;
  list-style: none;
  transition: all 0.5s ease;
}

.project-container {
  width: 100%;
  height: 100%;
  text-align: center;
  position: relative;
  border-radius: 2rem;
  overflow: hidden;
}
/* ... */

